manifests/09-ingress/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-a
  namespace: learning
spec:
  replicas: 1
  selector: {matchLabels: {app: web-a}}
  template:
    metadata: {labels: {app: web-a}}
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=Hello from WEB path"]
          ports: [{containerPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: web-a
  namespace: learning
spec:
  selector: {app: web-a}
  ports: [{port: 80, targetPort: 5678}]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-a
  namespace: learning
spec:
  replicas: 1
  selector: {matchLabels: {app: api-a}}
  template:
    metadata: {labels: {app: api-a}}
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=Hello from API path"]
          ports: [{containerPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: api-a
  namespace: learning
spec:
  selector: {app: api-a}
  ports: [{port: 80, targetPort: 5678}]
